--- a/html/subject.html
+++ b/html/subject.html
@@ -12,42 +12,17 @@
     <title>{{subject.capitalize()}}</title>
   </head>
   <body>
-    <div class="top">
+    <div class="tsop">
       <a href="/">
-        <img id="logoimage"src="../photos/pagelogo2.png"height=7% width=4%/>
       </a>
-      <ul>
-        <li>
-          <a href="credits">
-            Credits/References
-          </a>
-        </li>
-        <li>
-          <a href="personal">
-            My Page
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            Page3
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            Page4
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            Page5
-          </a>
-        </li>
-        <!-- <li>
-          <a href="#">
-            Page6
-          </a>
-        </li> -->
-      </ul>
+      <header class="mainHeader">
+    		<nav><ul>
+    			<li class="active"><a href="#">Home</a></li>
+    			<li><a href="credits">Credits/References</a></li>
+    			<li><a href="personal">My Page</a></li>
+    			<li><a href="#">Extrablah</a></li>
+    		</ul></nav>
+    	</header>
     </div>
     <img id="subjectmainbackground" src="../photos/compscibackground.jpg"/>
     <h1 id="subjecttitle">{{subject.replace("-", " ").title()}}</h1>
