--- a/html/credits.html
+++ b/html/credits.html
@@ -17,7 +17,7 @@
           <li><a href="/">Home</a></li>
           <li><a href="personal">My Page</a></li>
           <li><a href="credits">Credits/References</a></li>
-          <li><a href="#">Extrablah</a></li>
+          <!-- <li><a href="#">Extrablah</a></li> -->
         </ul></nav>
       </header>
     </div>
