--- a/html/mypage.html
+++ b/html/mypage.html
@@ -15,7 +15,7 @@
       </a>
       <header class="mainHeader">
     		<nav><ul>
-    			<li><a href="home">Home</a></li>
+    			<li><a href="/">Home</a></li>
           <li><a href="personal">My Page</a></li>
           <li><a href="credits">Credits/References</a></li>
     		</ul></nav>
